# codonpipe

./: README.md  environment.yml  pyproject.toml
codonpipe/: __init__.py  cli.py  pipeline.py
codonpipe/data/: ribosomal_cogs.txt
codonpipe/modules/: __init__.py  _codon_optimization_figures.py  _corpus_figures.py  _gene_set_extras.py  _gene_set_figure.py  ace_convergence.py  advanced_analyses.py  bio_ecology.py  cluster_stability.py  codon_optimization.py  codon_pair.py  codon_table_formats.py  cogclassifier.py  comparative.py  cross_genome.py  cu_statistics.py  enrichment.py  expression.py  gene_set.py  gmm_clustering.py  grodon.py  gsea.py  kofamscan.py  mahal_clustering.py  prokka.py  rscu.py  statistics.py
codonpipe/plotting/: comparative_plots.py  gsea_plots.py  plots.py  utils.py
codonpipe/utils/: _parallel.py  codon_tables.py  io.py  logging.py  statistics.py
tests/: test_advanced_analyses.py  test_annotation_dedup.py  test_bio_ecology.py  test_cli.py  test_codon_optimization.py  test_codon_pair.py  test_codon_table_formats.py  test_codon_tables.py  test_comparative.py  test_corpus_figures.py  test_cross_genome.py  test_dimensionality.py  test_enrichment.py  test_gene_set.py  test_gene_set_extras.py  test_rp_cluster_boundary.py  test_rp_cluster_identification.py  test_rp_subcluster_fit.py  test_rscu.py  test_statistics.py
